# program-as-weights-server

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: README.md
docs/: HOW_IT_WORKS.md
specs/: README.md
src/paw_local/: __init__.py  cli.py  gguf_export.py  interpreter.py  pipeline.py
src/paw_re_server/: __init__.py  data.py  models.py  runner.py
src/paw_server/: __init__.py  app.py  cli.py  store.py  worker.py
src/paw_server/compile/: __init__.py  gguf_export.py  mapper.py  pipeline.py  profiles.py  prompts.py
tests/: test_compile.py  test_data.py  test_paw_local.py  test_paw_server.py  test_runner.py
tests/fixtures/: sample_cases.yaml
