[project]
name = "paw-server"
version = "0.1.0"
description = "Self-hosted FastAPI server implementing the programasweights.com compile protocol, backed by a local PAW compile pipeline."
readme = "README.md"
authors = [
    { name = "Avrami H", email = "git@avrami.me" }
]
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.14.0",
    "fastapi>=0.139.0",
    "gguf>=0.19.0",
    "huggingface-hub[hf-xet]>=1.22.0",
    "peft>=0.19.1",
    "safetensors>=0.8.0",
    "torch>=2.12.1",
    "transformers>=5.13.0",
    "uvicorn>=0.50.2",
]

[project.scripts]
paw-server = "paw_server.cli:main"

[tool.uv.build-backend]
module-name = ["paw_server"]

[build-system]
requires = ["uv_build>=0.11.25,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=26.5.1",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # flake8-simplify
]
# Formatting is owned by black; keep ruff focused on linting/import-sorting.

[tool.ruff.lint.per-file-ignores]
# Prompt templates are verbatim from the PAW paper/research code; keep as-is.
"src/paw_server/compile/prompts.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["paw_server"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
